<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/libraryFragment">
    <fragment
        android:id="@+id/libraryFragment"
        android:name="com.example.kocchiyomi.ui.library.LibraryFragment"
        android:label="@string/library"
        tools:layout="@layout/fragment_library" >
        <action
            android:id="@+id/action_libraryFragment_to_browseFragment"
            app:destination="@id/browseFragment" />
        <action
            android:id="@+id/action_libraryFragment_to_mangaInfoFragment"
            app:destination="@id/mangaInfoFragment" />
    </fragment>
    <fragment
        android:id="@+id/browseFragment"
        android:name="com.example.kocchiyomi.ui.browse.BrowseFragment"
        android:label="@string/browse"
        tools:layout="@layout/fragment_browse" >
        <action
            android:id="@+id/action_browseFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_browseFragment_to_mangaInfoFragment"
            app:destination="@id/mangaInfoFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.kocchiyomi.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_searchFragment_to_mangaInfoFragment"
            app:destination="@id/mangaInfoFragment" />
    </fragment>
    <fragment
        android:id="@+id/mangaInfoFragment"
        android:name="com.example.kocchiyomi.ui.mangaInfo.MangaInfoFragment"
        android:label="@string/manga_info"
        tools:layout="@layout/fragment_manga_info" >
        <action
            android:id="@+id/action_mangaInfoFragment_to_readerFragment"
            app:destination="@id/readerFragment" />
    </fragment>
    <fragment
        android:id="@+id/readerFragment"
        android:name="com.example.kocchiyomi.ui.reader.ReaderFragment"
        android:label="fragment_reader"
        tools:layout="@layout/fragment_reader" />
</navigation>